<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>

<groupId>com.github.fauu</groupId>
<artifactId>kamite</artifactId>
<version>0.0.0</version>

<properties>
  <maven.compiler.release>23</maven.compiler.release>
</properties>

<repositories>
  <repository>
    <id>jitpack.io</id>
    <url>https://jitpack.io</url>
  </repository>
</repositories>

<dependencies>
  <dependency>
    <groupId>com.github.hypfvieh</groupId>
    <artifactId>dbus-java-core</artifactId>
    <version>4.3.2</version>
  </dependency>
  <dependency>
    <groupId>com.github.hypfvieh</groupId>
    <artifactId>dbus-java-transport-native-unixsocket</artifactId>
    <version>4.3.2</version>
  </dependency>
  <dependency>
    <groupId>com.github.tulskiy</groupId>
    <artifactId>jkeymaster</artifactId>
    <version>1.3</version>
  </dependency>
  <dependency>
    <groupId>io.javalin</groupId>
    <artifactId>javalin</artifactId>
    <version>6.4.0</version>
  </dependency>
  <dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-databind</artifactId>
    <version>2.18.2</version>
  </dependency>
  <dependency>
    <groupId>com.fasterxml.jackson.datatype</groupId>
    <artifactId>jackson-datatype-jsr310</artifactId>
    <version>2.18.2</version>
  </dependency>
  <dependency>
    <groupId>com.fasterxml.jackson.datatype</groupId>
    <artifactId>jackson-datatype-jdk8</artifactId>
    <version>2.18.2</version>
  </dependency>
  <dependency>
    <groupId>com.neovisionaries</groupId>
    <artifactId>nv-websocket-client</artifactId>
    <version>2.14</version>
  </dependency>
  <dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
    <version>1.7.36</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-slf4j-impl</artifactId>
    <version>2.24.3</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-api</artifactId>
    <version>2.24.3</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.24.3</version>
  </dependency>
  <dependency>
    <groupId>com.typesafe</groupId>
    <artifactId>config</artifactId>
    <version>1.4.3</version>
  </dependency>
  <dependency>
    <groupId>org.jsoup</groupId>
    <artifactId>jsoup</artifactId>
    <version>1.18.3</version>
  </dependency>
  <dependency>
    <groupId>net.java.dev.jna</groupId>
    <artifactId>jna</artifactId>
    <version>5.16.0</version>
  </dependency>
  <dependency>
    <groupId>com.github.atilika.kuromoji</groupId>
    <artifactId>kuromoji-core</artifactId>
    <version>e18ff911fd</version>
  </dependency>
  <dependency>
    <groupId>com.github.weisj</groupId>
    <artifactId>darklaf-core</artifactId>
    <version>3.0.2</version>
  </dependency>
</dependencies>

<build>
  <directory>${basedir}/target/java</directory>
  <resources>
    <resource>
      <directory>target/web</directory>
      <targetPath>${basedir}/target/java/classes/web</targetPath>
    </resource>
    <resource>
      <directory>src/main/resources</directory>
    </resource>
    <resource>
      <directory>config</directory>
      <includes>
        <include>config.default.hocon</include>
      </includes>
    </resource>
    <resource>
      <directory>res/icon</directory>
      <includes>
        <include>icon-16.png</include>
        <include>icon-32.png</include>
        <include>icon-48.png</include>
        <include>icon-128.png</include>
      </includes>
    </resource>
  </resources>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-enforcer-plugin</artifactId>
      <version>3.1.0</version>
      <executions>
        <execution>
          <id>enforce-maven</id>
          <goals>
            <goal>enforce</goal>
          </goals>
          <configuration>
            <rules>
              <requireMavenVersion>
                <version>3.3.1</version>
              </requireMavenVersion>
            </rules>
          </configuration>
        </execution>
      </executions>
    </plugin>
    <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>exec-maven-plugin</artifactId>
      <version>3.1.0</version>
      <configuration>
        <mainClass>io.github.kamitejp.Main</mainClass>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.10.1</version>
      <configuration>
        <compilerArgs>--enable-preview</compilerArgs>
      </configuration>
      <executions>
        <execution>
          <id>generate-log4j-plugin-descriptor</id>
          <goals>
            <goal>compile</goal>
          </goals>
          <phase>process-classes</phase>
          <configuration>
            <proc>only</proc>
            <annotationProcessorPaths>
              <path>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.24.3</version>
              </path>
            </annotationProcessorPaths>
            <annotationProcessors>
              <processor>org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor</processor>
            </annotationProcessors>
          </configuration>
        </execution>
      </executions>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-shade-plugin</artifactId>
      <version>3.3.0</version>
      <configuration>
        <createDependencyReducedPom>false</createDependencyReducedPom>
      </configuration>
      <executions>
        <execution>
          <phase>package</phase>
          <goals>
            <goal>shade</goal>
          </goals>
          <configuration>
            <transformers>
              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                <mainClass>io.github.kamitejp.Main</mainClass>
                <manifestEntries>
                  <Multi-Release>true</Multi-Release>
                </manifestEntries>
              </transformer>
              <transformer implementation="io.github.edwgiz.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer">
              </transformer>
            </transformers>
          </configuration>
        </execution>
      </executions>
      <dependencies>
        <dependency>
          <groupId>io.github.edwgiz</groupId>
          <artifactId>log4j-maven-shade-plugin-extensions</artifactId>
          <version>2.20.0</version>
        </dependency>
      </dependencies>
    </plugin>
    <plugin>
      <groupId>io.github.git-commit-id</groupId>
      <artifactId>git-commit-id-maven-plugin</artifactId>
      <version>5.0.0</version>
      <executions>
        <execution>
          <id>get-the-git-infos</id>
          <goals>
            <goal>revision</goal>
          </goals>
          <phase>initialize</phase>
        </execution>
      </executions>
      <configuration>
        <generateGitPropertiesFile>true</generateGitPropertiesFile>
        <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
        <includeOnlyProperties>
          <includeOnlyProperty>^git.branch$</includeOnlyProperty>
          <includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
          <includeOnlyProperty>^git.tags$</includeOnlyProperty>
        </includeOnlyProperties>
        <commitIdGenerationMode>full</commitIdGenerationMode>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-site-plugin</artifactId>
      <version>3.12.1</version>
    </plugin>
  </plugins>
</build>

<reporting>
  <plugins>
    <plugin>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-maven-plugin</artifactId>
      <version>4.7.3.0</version>
      <configuration>
        <plugins>
          <plugin>
            <groupId>com.mebigfatguy.sb-contrib</groupId>
            <artifactId>sb-contrib</artifactId>
            <version>7.4.7</version>
          </plugin>
        </plugins>
      </configuration>
    </plugin>
  </plugins>
</reporting>
</project>
